// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Countdown /> should render a simple countdown 1`] = `
<Countdown
  date={1482453477527}
>
  01
  :
  01
  :
  01
  :
  50
</Countdown>
`;

exports[`<Countdown /> should render custom renderer output 1`] = `
<Countdown
  date={1482453477527}
  renderer={[Function]}
>
  <div>
    1
    1
    1
    50
  </div>
</Countdown>
`;

exports[`<Countdown /> should render with daysInHours => true 1`] = `
<Countdown
  date={1482453477527}
  daysInHours={true}
>
  25
  :
  01
  :
  50
</Countdown>
`;

exports[`<Countdown /> should render with zeroPadDays => 3 1`] = `
<Countdown
  date={1483227367071}
  zeroPadDays={3}
>
  010
  :
  00
  :
  00
  :
  00
</Countdown>
`;

exports[`<Countdown /> should trigger onTick and onComplete callbacks 1`] = `
<Countdown
  date={1482363377071}
  onComplete={[MockFunction]}
  onTick={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "completed": false,
            "days": 0,
            "hours": 0,
            "milliseconds": 0,
            "minutes": 0,
            "seconds": 6,
            "total": 6000,
          },
        ],
        Array [
          Object {
            "completed": false,
            "days": 0,
            "hours": 0,
            "milliseconds": 0,
            "minutes": 0,
            "seconds": 6,
            "total": 6000,
          },
        ],
        Array [
          Object {
            "completed": false,
            "days": 0,
            "hours": 0,
            "milliseconds": 0,
            "minutes": 0,
            "seconds": 6,
            "total": 6000,
          },
        ],
        Array [
          Object {
            "completed": false,
            "days": 0,
            "hours": 0,
            "milliseconds": 0,
            "minutes": 0,
            "seconds": 6,
            "total": 6000,
          },
        ],
        Array [
          Object {
            "completed": false,
            "days": 0,
            "hours": 0,
            "milliseconds": 0,
            "minutes": 0,
            "seconds": 6,
            "total": 6000,
          },
        ],
        Array [
          Object {
            "completed": false,
            "days": 0,
            "hours": 0,
            "milliseconds": 0,
            "minutes": 0,
            "seconds": 6,
            "total": 6000,
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  00
  :
  00
  :
  00
  :
  06
</Countdown>
`;
